--- a/Reggie.ipynb
+++ b/Reggie.ipynb
@@ -39,6 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+   " # file location: /cms/data/jolawren/ana/CMSSW_10_5_0/src/RegressionTrainer "
     "noRegFile = uproot.open(\"pfClusters_tree_noPU_testing.root\")\n",
     "withRegFile = uproot.open(\"pfClusters_tree_noPU_withRegression.root\")\n",
     "\n",
